[gd_scene load_steps=17 format=2]

[ext_resource path="res://constellations/StarMarker.tscn" type="PackedScene" id=1]
[ext_resource path="res://constellations/Constellation.tscn" type="PackedScene" id=2]
[ext_resource path="res://static_art/0_bg_stars.png" type="Texture" id=3]
[ext_resource path="res://static_art/0_sky.png" type="Texture" id=4]
[ext_resource path="res://static_art/5_cats.png" type="Texture" id=5]
[ext_resource path="res://constellations/fish/stars.png" type="Texture" id=6]
[ext_resource path="res://constellations/fish/art.png" type="Texture" id=7]
[ext_resource path="res://constellations/fish/skeleton.png" type="Texture" id=8]
[ext_resource path="res://constellations/fish/silhouette.png" type="Texture" id=9]
[ext_resource path="res://Main.gd" type="Script" id=10]
[ext_resource path="res://Camera.gd" type="Script" id=11]
[ext_resource path="res://static_art/1_bg.png" type="Texture" id=12]
[ext_resource path="res://static_art/4_mg3.png" type="Texture" id=13]
[ext_resource path="res://static_art/2_mg1.png" type="Texture" id=14]
[ext_resource path="res://static_art/3_mg2.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 148.146, 80.3629 )

[node name="Main" type="Node2D"]
script = ExtResource( 10 )

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
limit_left = 0
limit_top = 0
limit_right = 3840
limit_bottom = 1080
smoothing_enabled = true
editor_draw_limits = true
script = ExtResource( 11 )

[node name="LeftMargin" type="Control" parent="Camera"]
margin_right = 200.0
margin_bottom = 1080.0
mouse_filter = 1
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMargin" type="Control" parent="Camera"]
margin_left = 1720.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parallax" type="ParallaxBackground" parent="."]
layer = -1

[node name="Sky" type="ParallaxLayer" parent="Parallax"]
__meta__ = {
"_editor_description_": ""
}

[node name="sky" type="Sprite" parent="Parallax/Sky"]
texture = ExtResource( 4 )
centered = false

[node name="bg_stars" type="Sprite" parent="Parallax/Sky"]
texture = ExtResource( 3 )
centered = false

[node name="Stars" type="Node2D" parent="Parallax/Sky"]

[node name="Bg0" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2( 0.85, 1 )
motion_offset = Vector2( -190, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="bg" type="Sprite" parent="Parallax/Bg0"]
texture = ExtResource( 12 )
centered = false

[node name="Bg1" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2( 0.6, 1 )
motion_offset = Vector2( -400, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="mg1" type="Sprite" parent="Parallax/Bg1"]
texture = ExtResource( 14 )
centered = false

[node name="Bg2" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2( 0.4, 1 )
motion_offset = Vector2( -650, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="mg2" type="Sprite" parent="Parallax/Bg2"]
texture = ExtResource( 15 )
centered = false

[node name="Bg3" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2( 0.25, 1 )
motion_offset = Vector2( -800, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="mg3" type="Sprite" parent="Parallax/Bg3"]
texture = ExtResource( 13 )
centered = false

[node name="Cats" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2( -0.07, 1 )
motion_offset = Vector2( -1030, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="cats" type="Sprite" parent="Parallax/Cats"]
texture = ExtResource( 5 )
centered = false

[node name="Constellations" type="Node2D" parent="."]

[node name="Fish" parent="Constellations" instance=ExtResource( 2 )]
position = Vector2( 602.075, 851.632 )
visibility_flags = 2

[node name="StarMarker" parent="Constellations/Fish/Axis/StarMarkers" index="0" instance=ExtResource( 1 )]
position = Vector2( 142.434, -70.8731 )

[node name="StarMarker2" parent="Constellations/Fish/Axis/StarMarkers" index="1" instance=ExtResource( 1 )]
position = Vector2( 144.954, 32.4404 )

[node name="StarMarker3" parent="Constellations/Fish/Axis/StarMarkers" index="2" instance=ExtResource( 1 )]
position = Vector2( 105.266, 1.57227 )

[node name="StarMarker4" parent="Constellations/Fish/Axis/StarMarkers" index="3" instance=ExtResource( 1 )]
position = Vector2( -130.339, 53.2291 )

[node name="StarMarker5" parent="Constellations/Fish/Axis/StarMarkers" index="4" instance=ExtResource( 1 )]
position = Vector2( -96.321, -25.516 )

[node name="StarMarker6" parent="Constellations/Fish/Axis/StarMarkers" index="5" instance=ExtResource( 1 )]
position = Vector2( -34.5849, 85.3571 )

[node name="StarMarker7" parent="Constellations/Fish/Axis/StarMarkers" index="6" instance=ExtResource( 1 )]
position = Vector2( -27.0254, -42.5249 )

[node name="StarMarker8" parent="Constellations/Fish/Axis/StarMarkers" index="7" instance=ExtResource( 1 )]
position = Vector2( 2.58276, 77.7975 )

[node name="StarMarker9" parent="Constellations/Fish/Axis/StarMarkers" index="8" instance=ExtResource( 1 )]
position = Vector2( 18.3318, -49.4545 )

[node name="StarMarker10" parent="Constellations/Fish/Axis/StarMarkers" index="9" instance=ExtResource( 1 )]
position = Vector2( 47.3099, 62.6785 )

[node name="Shape" parent="Constellations/Fish/Axis/Area" index="0"]
shape = SubResource( 3 )

[node name="Stars" parent="Constellations/Fish/Axis" index="2"]
texture = ExtResource( 6 )

[node name="Silhouette" parent="Constellations/Fish/Axis" index="3"]
visible = true
texture = ExtResource( 9 )

[node name="Skeleton" parent="Constellations/Fish/Axis" index="4"]
position = Vector2( 7, 7.5 )
texture = ExtResource( 8 )

[node name="Art" parent="Constellations/Fish/Axis" index="5"]
visible = false
modulate = Color( 0.215686, 0.658824, 0.619608, 1 )
texture = ExtResource( 7 )

[connection signal="mouse_entered" from="Camera/LeftMargin" to="Camera" method="_on_LeftMargin_mouse_entered"]
[connection signal="mouse_exited" from="Camera/LeftMargin" to="Camera" method="_on_LeftMargin_mouse_exited"]
[connection signal="mouse_entered" from="Camera/RightMargin" to="Camera" method="_on_RightMargin_mouse_entered"]
[connection signal="mouse_exited" from="Camera/RightMargin" to="Camera" method="_on_RightMargin_mouse_exited"]

[editable path="Constellations/Fish"]
